--- a/releases/v3.1/Northwind.Service/Northwind.Service.csproj
+++ b/releases/v3.1/Northwind.Service/Northwind.Service.csproj
@@ -57,9 +57,9 @@
     <Compile Include="ProductService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Repository\Repository.csproj">
+    <ProjectReference Include="..\Repository\Repository.Pattern.csproj">
       <Project>{6E682A14-C872-4813-B620-76E108DEA683}</Project>
-      <Name>Repository</Name>
+      <Name>Repository.Pattern</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
