--- a/releases/v3.1/Sample/Northwind.Repository/Northwind.Repository.csproj
+++ b/releases/v3.1/Sample/Northwind.Repository/Northwind.Repository.csproj
@@ -61,6 +61,10 @@
       <Project>{6e682a14-c872-4813-b620-76e108dea683}</Project>
       <Name>Repository.Pattern</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Northwind.Entity\Northwind.Entitiy.csproj">
+      <Project>{97515F06-0783-420C-AC3A-45357015B699}</Project>
+      <Name>Northwind.Entitiy</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
