--- a/main/Source/Repository.Pattern/packages.config
+++ b/main/Source/Repository.Pattern/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.2" targetFramework="net451" />
+  <package id="LinqKit" version="1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0" targetFramework="net451" />
