--- a/main/Sample/Northwind.Web/packages.config
+++ b/main/Sample/Northwind.Web/packages.config
@@ -3,6 +3,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="KendoUIWeb" version="2013.3.1119" targetFramework="net45" />
