--- a/main/Sample/Northwind.Web/Northwind.Web.csproj
+++ b/main/Sample/Northwind.Web/Northwind.Web.csproj
@@ -1235,9 +1235,9 @@
       <Project>{6E682A14-C872-4813-B620-76E108DEA683}</Project>
       <Name>Repository.Pattern</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Northwind.Entity\Northwind.Entitiy.csproj">
+    <ProjectReference Include="..\Northwind.Entity\Northwind.Entities.csproj">
       <Project>{97515F06-0783-420C-AC3A-45357015B699}</Project>
-      <Name>Northwind.Entitiy</Name>
+      <Name>Northwind.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Northwind.Repository\Northwind.Repository.csproj">
       <Project>{0fb607ea-4bb3-404b-9461-2232b5423885}</Project>
