--- a/main/Sample/Northwind.Repository/Northwind.Repository.csproj
+++ b/main/Sample/Northwind.Repository/Northwind.Repository.csproj
@@ -60,9 +60,9 @@
       <Project>{6e682a14-c872-4813-b620-76e108dea683}</Project>
       <Name>Repository.Pattern</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Northwind.Entity\Northwind.Entitiy.csproj">
+    <ProjectReference Include="..\Northwind.Entity\Northwind.Entities.csproj">
       <Project>{97515F06-0783-420C-AC3A-45357015B699}</Project>
-      <Name>Northwind.Entitiy</Name>
+      <Name>Northwind.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
