--- a/main/Sample/Northwind.Test/Northwind.Test.csproj
+++ b/main/Sample/Northwind.Test/Northwind.Test.csproj
@@ -72,9 +72,9 @@
     <Compile Include="Service\CustomerServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Northwind.Entity\Northwind.Entitiy.csproj">
+    <ProjectReference Include="..\Northwind.Entity\Northwind.Entities.csproj">
       <Project>{97515f06-0783-420c-ac3a-45357015b699}</Project>
-      <Name>Northwind.Entitiy</Name>
+      <Name>Northwind.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Northwind.Service\Northwind.Service.csproj">
       <Project>{678DB4A2-A20D-4F71-8A98-D8BBE879DEDD}</Project>
