Remove Entity Framework from Repository.Pattern project for separation of concerns

--- a/main/Sample/Northwind.Entities/App.config
+++ b/main/Sample/Northwind.Entities/App.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="NorthwindContext" connectionString="Data Source=.;Initial Catalog=Northwind;Integrated Security=True;MultipleActiveResultSets=True"
       providerName="System.Data.SqlClient" />
+    <add name="masterContext" connectionString="Data Source=.;Integrated Security=True;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
