--- a/main/Source/Repository.Pattern/App.config
+++ b/main/Source/Repository.Pattern/App.config
@@ -5,7 +5,7 @@
     
     
     
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
       <parameters>
