--- a/main/Source/Repository.Pattern.Ef6/packages.config
+++ b/main/Source/Repository.Pattern.Ef6/packages.config
@@ -2,4 +2,12 @@
 <packages>
   <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net451" />
+  <package id="LinqKit" version="1.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
 </packages>
