--- a/main/Source/Repository.Pattern/Repository.Pattern.csproj
+++ b/main/Source/Repository.Pattern/Repository.Pattern.csproj
@@ -59,7 +59,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
-
+    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Sample\packages\Microsoft.AspNet.WebApi.Client.5.1.2\lib\net45\System.Net.Http.dll</HintPath>
