--- a/main/Sample/Northwind.Web/packages.config
+++ b/main/Sample/Northwind.Web/packages.config
@@ -1,35 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AngularJS.Animate" version="1.2.16" targetFramework="net451" />
-  <package id="AngularJS.Core" version="1.2.16" targetFramework="net451" />
+  <package id="AngularJS.Animate" version="1.3.0-beta6" targetFramework="net451" />
+  <package id="AngularJS.Core" version="1.3.0-beta6" targetFramework="net451" />
   <package id="AngularJS.KendoUI" version="1.0.0" targetFramework="net451" />
-  <package id="AngularJS.Route" version="1.2.16" targetFramework="net451" />
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.3.0-beta6" targetFramework="net451" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="bootstrap" version="3.1.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
-  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.0" targetFramework="net451" />
+  <package id="jQuery.Migrate" version="1.2.1" targetFramework="net451" />
   <package id="KendoUIWeb" version="2014.1.318" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
-  <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.6.1" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Modernizr" version="2.7.2" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
+  <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="System.Spatial" version="5.6.1" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
   <package id="Unity.AspNet.WebApi" version="3.5.1404.0" targetFramework="net451" />
   <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net451" />
-  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net451" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
