Added RepositoryProvider stuff and the required ancillary changes. Temporarily unloaded the Tests project so solution builds.

--- a/main/Source/Repository.Pattern.Ef6/Repository.Pattern.Ef6.csproj
+++ b/main/Source/Repository.Pattern.Ef6/Repository.Pattern.Ef6.csproj
@@ -92,6 +92,9 @@
   <ItemGroup>
     <Compile Include="DataContext.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="Factories\IRepositoryProvider.cs" />
+    <Compile Include="Factories\RepositoryFactories.cs" />
+    <Compile Include="Factories\RepositoryProvider.cs" />
     <Compile Include="FakeDbContext.cs" />
     <Compile Include="FakeDbSet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
