adding integration test with actual NorthwindTest db creation in test setup

--- a/main/Sample/Northwind.Test/App.config
+++ b/main/Sample/Northwind.Test/App.config
@@ -3,7 +3,9 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
+  <connectionStrings>
+    <add name="NorthwindContext" connectionString="Data Source=.; Initial Catalog=NorthwindTest; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
