Issue: 1226 - Transactions: ObjectDisposedException - emperor_ming

--- a/main/Sample/Northwind.Test/Northwind.Test.csproj
+++ b/main/Sample/Northwind.Test/Northwind.Test.csproj
@@ -82,6 +82,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="IntegrationTests\CustomerRepository_Tests.cs" />
+    <Compile Include="IntegrationTests\UnitOfWork_Tests.cs" />
     <Compile Include="UnitTests\Fake\NorthwindFakeContext.cs" />
     <Compile Include="UnitTests\Fake\NorthwindFakeDbSets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
