updating ServiceLocator 1.3 package

--- a/main/Sample/Northwind.Repository/Northwind.Repository.csproj
+++ b/main/Sample/Northwind.Repository/Northwind.Repository.csproj
@@ -44,8 +44,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="LinqKit">
-      <HintPath>..\packages\LinqKit.1.0\lib\35\LinqKit.dll</HintPath>
+    <Reference Include="LinqKit, Version=1.1.1.0, Culture=neutral, PublicKeyToken=bc217f8844052a91, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\LINQKit.1.1.1\lib\net45\LinqKit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
