--- a/main/Sample/Northwind.Repository/packages.config
+++ b/main/Sample/Northwind.Repository/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
-  <package id="LinqKit" version="1.0" targetFramework="net451" />
+  <package id="LINQKit" version="1.1.1" targetFramework="net451" />
 </packages>
