removing repository factories, this will not be needed, levarage DI/IoC for other providers

--- a/main/Sample/Northwind.Test/Northwind.Test.csproj
+++ b/main/Sample/Northwind.Test/Northwind.Test.csproj
@@ -85,6 +85,7 @@
     <Compile Include="IntegrationTests\CustomerRepositoryTests.cs" />
     <Compile Include="IntegrationTests\UnitOfWorkTests.cs" />
     <Compile Include="IntegrationTests\ProductRepositoryTest.cs" />
+    <Compile Include="IntegrationTests\OrderRepositoryTest.cs" />
     <Compile Include="IntegrationTests\Utility.cs" />
     <Compile Include="UnitTests\Fake\NorthwindFakeContext.cs" />
     <Compile Include="UnitTests\Fake\NorthwindFakeDbSets.cs" />
