--- a/main/Source/Repository.Pattern.Ef6/Repository.Pattern.Ef6.csproj
+++ b/main/Source/Repository.Pattern.Ef6/Repository.Pattern.Ef6.csproj
@@ -37,6 +37,9 @@
       <HintPath>..\..\Sample\packages\LINQKit.1.1.1\lib\net45\LinqKit.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\..\Sample\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -60,9 +63,6 @@
   <ItemGroup>
     <Compile Include="DataContext.cs" />
     <Compile Include="Entity.cs" />
-    <Compile Include="Factories\IRepositoryProvider.cs" />
-    <Compile Include="Factories\RepositoryFactories.cs" />
-    <Compile Include="Factories\RepositoryProvider.cs" />
     <Compile Include="FakeDbContext.cs" />
     <Compile Include="FakeDbSet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
