--- a/main/Source/Repository.Pattern.Ef6/packages.config
+++ b/main/Source/Repository.Pattern.Ef6/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="LINQKit" version="1.1.1" targetFramework="net451" />
 </packages>
